Fished a bug wich z-index off spinner makes every clikable thing not working

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@
   }
   to {
     opacity: 0;
+    z-index: -10;
   }
 }
 
@@ -81,6 +82,7 @@
   }
   to {
     opacity: 0;
+    z-index: -10;
   }
 }
 
