--- a/css/utils/_keyframes.scss
+++ b/css/utils/_keyframes.scss
@@ -36,6 +36,7 @@
   }
   to {
     opacity: 0;
+    z-index: -10;
   }
 }
 
